@@ -79,6 +79,12 @@ IntRect AffineTransform::mapRect(const IntRect &rect) const
     return IntRect();
 }
 
+FloatRect AffineTransform::mapRect(const FloatRect &rect) const
+{
+    notImplemented();
+    return FloatRect();
+}
+
 
 AffineTransform& AffineTransform::scale(double sx, double sy) 
 {
